<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/android"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <LinearLayout
                android:paddingLeft="16dp"
                android:paddingTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user_name"
                    android:textColor="#8BC34A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testuser"/>
                <TextView
                    android:id="@+id/was_active"
                    android:paddingTop="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_months_ago"/>

            </LinearLayout>
            <TextView
                android:paddingTop="35dp"
                android:paddingLeft="155dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="#"/>
            <TextView
                android:id="@+id/serial_count"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"/>
        </LinearLayout>

        <LinearLayout

            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/sample_text"
                android:background="#7295A6"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:paddingTop="1dp"
                android:paddingLeft="24dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/posting_via_app"/>


        </LinearLayout>
        <TextView
            android:id="@+id/sample_text1"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testing_reply"/>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="#8BC34A"
                android:paddingLeft="250dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlike"
                />
            <TextView
                android:textColor="#8BC34A"
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply"
                />
        </LinearLayout>




    </LinearLayout>

</LinearLayout>